src/objects/smagicinteract__Incoming_MMS_Detail__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Incoming_SMS__c</fullName>
        <label>Incoming SMS</label>
        <referenceTo>smagicinteract__Incoming_SMS__c</referenceTo>
        <relationshipLabel>Incoming MMS Details</relationshipLabel>
        <relationshipName>Incoming_MMS_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Type__c</fullName>
        <label>MMS Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_URL__c</fullName>
        <label>MMS URL</label>
        <type>Url</type>
    </fields>
    <label>Incoming MMS Detail</label>
    <nameField>
        <label>Incoming MMS Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incoming MMS Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>